2013-02-26  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* sysdeps/soft-dfp/trunctdsd2.c (trunctdsd2): Add missing hidden_def.
	* sysdeps/powerpc/fpu/libdfp.abilist: Add missing __dpd_trunctdsd2.

2013-02-26  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* Makefile.in: Add check-abi rules.
	* scripts/abilist.awk: New file: ABI check.
	* sysdeps/powerpc/dfpu/libdfp.abilist: ABI definition for PowerPC
	hardware DFP.
	* sysdeps/powerpc/fpu/libdfp.abilist: ABI definition for PowerPC
	software DFP.

2013-02-26  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* fe_decround.c: Move to ...
	* sysdeps/soft-dfp/fe_decround.c: ... here.

2013-02-26  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* mapround.c: Move to ...
	* sysdeps/generic/mapround.c: here.

2013-02-26  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* sysdeps/powerpc/dfpu/copysignd128.c: New file: optimized copysignd128
	for PowerPC.
	* sysdeps/powerpc/dfpu/copysignd64.c: New file: optimized copysignd64
	for PowerPC.
	* sysdeps/powerpc/dfpu/copysignd32.c: New file: optimized copysignd32
	for PowerPC.

2013-02-26  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* Makefile.in (libdfp_c_tests): Add copysign new tests.
	* tests/copysign.input: New file: copysign new tests input.

2013-02-26  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* sysdeps/powerpc/fpu/libdfp-test-ulps: Update.

2013-02-26  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* sysdeps/powerpc/dfpu/libdfp-test-ulps: Update.

2013-02-26  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* configure.ac: Add dfpu in front of fpu in sysdeps selection.

2013-02-26  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* sysdeps/powerpc/dfpu/fabsd128.c: New file: optimized fabsd128 for
	PowerPC.
	* sysdeps/powerpc/dfpu/fabsd64.c: New file: optimized fabsd64 for
	PowerPC.
	* sysdeps/powerpc/dfpu/fabsd32.c: New file: optimized fabsd32 for
	PowerPC.

2013-02-26  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>
